kubernetes/traffic_management/http-server-mirroring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment-mirroring
  # mirroring doesn't work if we turn on  PeerAuthentication ( security -> peer-authentication-with-mutual-TLS.yaml)
  namespace: without-istio
  labels:
    app: http-server-app
    version: v0-mirroring
spec:
  selector:
    matchLabels:
      app: http-server-app
      version: v0-mirroring
  replicas: 1
  template:
    metadata:
      labels:
        app: http-server-app
        version: v0-mirroring
    spec:
      containers:
        - name: http-server-container
          image: http-server:mirroring
          ports:
            - name: http-serv-port
              containerPort: 3001
      #restartPolicy: Never
