kubernetes/traffic_management/http-server-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment-v2
  labels:
    app: http-server-app
    version: v2
    tags.datadoghq.com/env: snd
    tags.datadoghq.com/service: http-server-app
    tags.datadoghq.com/version: v2
spec:
  selector:
    matchLabels:
      app: http-server-app
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        admission.datadoghq.com/enabled: "true"
        app: http-server-app
        version: v2
        tags.datadoghq.com/env: snd
        tags.datadoghq.com/service: http-server-app
        tags.datadoghq.com/version: v2
    spec:
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
      containers:
        - name: http-server-container
          image: mojeico/http-server:v2
          ports:
            - name: http-serv-port
              containerPort: 3001
          volumeMounts:
            - name: apmsocketpath
              mountPath: /var/run/datadog
