kubernetes/traffic_management/get-server-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-server-deployment-v22
  labels:
    app: get-server
    version: v22
    tags.datadoghq.com/env: snd
    tags.datadoghq.com/service: get-server
    tags.datadoghq.com/version: v22
spec:
  selector:
    matchLabels:
      app: get-server
      version: v22
  replicas: 1
  template:
    metadata:
      labels:
        admission.datadoghq.com/enabled: "true"
        app: get-server
        version: v22
        tags.datadoghq.com/env: snd
        tags.datadoghq.com/service: get-server
        tags.datadoghq.com/version: v22
    spec:
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
      containers:
        - name: get-server-container
          #image: get-server-grpc:v22
          image: europe-west3-docker.pkg.dev/mojeico/client/get-grpc:v22
          ports:
            - name: get-server-port
              containerPort: 50052
          volumeMounts:
            - name: apmsocketpath
              mountPath: /var/run/datadog
---
apiVersion: v1
kind: Service
metadata:
  name: get-server-grpc
spec:
  selector:
    app: get-server
  ports:
    - port: 50052
      targetPort: 50052
