kubernetes/traffic_management/get-server-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: get-server-grpc-destination-rule
spec:
  host: get-server-grpc
  #host: service-name

  # NOT WORK
  #host: get-server.default.svc.cluster.local
  #      app-name.namespace.svc.cluster.local
  #host: echo.echo-grpc.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: get-server-grpc-virtual-service
spec:
  hosts:
    #host: service-name
    - get-server-grpc
  http:
    - route:
        - destination:
            host: get-server-grpc
            #host: service-name
            subset: v1
          weight: 10
        - destination:
            host: get-server-grpc
            #host: service-name
            subset: v2
          weight: 90
