kubernetes/traffic_management/server-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-grpc-destination-rule
spec:
  #server service name
  host: server-service
  subsets:
    - name: v1
      labels:
        version: v1



---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-grpc-virtual-service
spec:
  hosts:
    #server service name
    - server-service
  http:
    - route:
        - destination:
            host: server-service
            #host: service-name
            subset: v1
